[gd_scene load_steps=5 format=2]

[ext_resource path="res://Door/Door Type.gd" type="Script" id=1]
[ext_resource path="res://Door/Blastshield Type.gd" type="Script" id=2]
[ext_resource path="res://Door/Door Warp destination.gd" type="Script" id=3]
[ext_resource path="res://Door/Door Node.gd" type="Script" id=4]

[node name="Door Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Door type Label" type="Label" parent="."]
margin_left = 11.0
margin_top = 31.0
margin_right = 51.0
margin_bottom = 45.0
rect_scale = Vector2( 2, 2 )
text = "Type:"

[node name="Door Type" type="OptionButton" parent="."]
margin_left = 90.0
margin_top = 28.0
margin_right = 210.0
margin_bottom = 48.0
rect_scale = Vector2( 2, 1.5 )
script = ExtResource( 1 )

[node name="Blastshield Label" type="Label" parent="."]
margin_left = 13.0
margin_top = 84.0
margin_right = 88.0
margin_bottom = 98.0
rect_scale = Vector2( 2, 2 )
text = "Blastshield:"

[node name="Blastshield Type" type="OptionButton" parent="."]
margin_left = 173.0
margin_top = 76.0
margin_right = 423.0
margin_bottom = 113.0
script = ExtResource( 2 )

[node name="Door Warp Checkbox" type="CheckBox" parent="."]
margin_left = 5.0
margin_top = 126.0
margin_right = 125.0
margin_bottom = 150.0
rect_scale = Vector2( 2, 2 )
text = "Door Warp?"

[node name="Door Warp destination" type="OptionButton" parent="."]
margin_left = 204.0
margin_top = 131.0
margin_right = 524.0
margin_bottom = 168.0
script = ExtResource( 3 )

[node name="warpDock" type="OptionButton" parent="."]
margin_left = 210.0
margin_top = 195.0
margin_right = 510.0
margin_bottom = 230.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 200.0
margin_right = 104.0
margin_bottom = 214.0
rect_scale = Vector2( 2, 2 )
text = "Dock to warp to:"
[connection signal="item_selected" from="Door Type" to="." method="_on_Door_Type_item_selected"]
[connection signal="item_selected" from="Blastshield Type" to="." method="_on_Blastshield_Type_item_selected"]
[connection signal="item_selected" from="Door Warp destination" to="." method="_on_Door_Warp_destination_item_selected"]
[connection signal="item_selected" from="warpDock" to="." method="_on_warpDock_item_selected"]
